<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndGameActivity">


    <TextView
        android:id="@+id/Player2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player1ScoreString"
        app:layout_constraintBottom_toTopOf="@+id/winnerTextView"
        app:layout_constraintEnd_toStartOf="@+id/Player1Score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Player1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player2ScoreString"
        app:layout_constraintBottom_toTopOf="@+id/winnerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Player2Score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winnerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Player1Score"
        app:layout_constraintStart_toStartOf="@+id/Player2Score"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winnerTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>